[package]
name = "tpwt_r"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html[lib]
name = "tpwt_r"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
ndarray = { version = "0.15", features = ["rayon"] }
polars = { version = "0.29", features = ["lazy", "ndarray", "serde", "json", "describe"] }
geo = { version = "0.24" }
sacio = {version = "0.1.0" }
fstrings = { version = "0.2" }
rayon = { version = "1.7" }
